# Spencer-Macro-Utilities

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LINUX_SETUP.md  MACOS_SETUP.md  README.md  python.py
.github/: autoupdaterurl
AppImage/: AppRun  SMU.desktop  launcher.sh  nfpm.yaml  postinstall.sh  postremove.sh
app/: app_assets.cpp  app_assets.h  app_context.cpp  app_context.h  app_main.cpp  app_main.h  app_profile_bridge.cpp  app_profile_bridge.h  app_theme_bridge.cpp  app_ui.cpp  app_ui.h  app_ui_controls.h  askpass.cpp  askpass.h  input_actions.cpp  input_actions.h  linux_lagswitch_helper.cpp  linux_lagswitch_helper.h  macro_runtime.cpp  macro_runtime.h  macro_tutorial_assets.cpp  macro_tutorial_assets.h  main_linux.cpp  main_macos.cpp  main_windows.cpp  notification_suppression.h  profile_manager.cpp  profile_manager.h  script_api.cpp  script_api.h  script_instance.cpp  script_instance.h  script_manager.cpp  script_manager.h  script_metadata.cpp  script_metadata.h  theme_manager.cpp  theme_manager.h
assets/: smu_icon.icns
build-linux-debug/: CMakeCache.txt
cmake/: CMakeLists.txt
cmake/macos/: Info.plist.in
cmake/res/: RCa48192  RCd09244  resource.h  suspend.rc
cmake/src/: macroframework.cpp
core/: app_state.h  key_codes.h  legacy_globals.h  macro_state.cpp
docs/: lua_macro_scripting.md  macos_unsigned_release_notes.md
platform/: file_dialog.cpp  file_dialog.h  input_backend.h  logging.cpp  logging.h  network_backend.cpp  network_backend.h  platform_capabilities.cpp  platform_types.h
public/: index.html
src/: App.js
(+82 files in other folders)
